# backend

./: .dockerignore  .gitignore  README.md  dockerfile  fly.toml  jwt.py  key.pem  main.py  pyproject.toml  requirements.txt
app/config/: settings.py
app/controllers/: __init__.py  analysis_controller.py  auth_controller.py  github_controller.py
app/controllers/security/: auth.py
app/logger/: logger.py
app/models/: models_AI.py  models_commit.py
app/prompts/: system_prompt.py
app/routers/: __init__.py  github_router.py
app/security/: auth.py
app/services/: chromadb_service.py  commits.py  embeddings.py  gemini.py  supabase_service.py
app/test/: mock_analysis.py  mock_commits.py  mock_embeddings.py
